--- a/HopeBar/app/src/main/res/values/strings.xml
+++ b/HopeBar/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_main2">Main2Activity</string>
+
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="title_activity_about">About</string>
+    <string name="title_activity_the_bar">TheBar</string>
+    <string name="title_activity_impact">Impact</string>
+    <string name="title_activity_bar">Bar</string>
+    <string name="title_activity_buy">Buy</string>
+    <string name="title_activity_share">Share</string>
 </resources>
