--- a/HopeBar/app/src/main/res/values/strings.xml
+++ b/HopeBar/app/src/main/res/values/strings.xml
@@ -1,10 +1,8 @@
 <resources>
     <string name="app_name">HopeBar</string>
-
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main2">Main2Activity</string>
-
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
@@ -14,4 +12,9 @@
     <string name="title_activity_bar">Bar</string>
     <string name="title_activity_buy">Buy</string>
     <string name="title_activity_share">Share</string>
+    <string name="pay">Pay</string>
+    <string name="number">Number of Boxes</string>
+    <string name="cost">$75/box</string>
+    <string name="total">Total number of Bars</string>
+
 </resources>
